Add new skills and TODO project

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 									<h2>Proyecto Batatabit</h2>
 									<p>Creación de una landing page responsive usando HTML y CSS</p>
 									<ul class="actions">
-										<li><a href="https://kevjim.github.io/batatabit/" class="button">Ve al proyecto</a></li>
+										<li><a href="https://kevjim.github.io/batatabit/" class="button"  target="_blank" rel="noopener noreferrer" >Ve al proyecto</a></li>
 									</ul>
 								</div>
 							</div>
@@ -69,7 +69,7 @@
 										las que se encuentran en tendencia. Usando HTML, CSS y JavaScript
 									</p>
 									<ul class="actions">
-										<li><a href="https://kevjim.github.io/PelisTendencia/" class="button">Ve al proyecto</a></li>
+										<li><a href="https://kevjim.github.io/PelisTendencia/" class="button"  target="_blank" rel="noopener noreferrer" >Ve al proyecto</a></li>
 									</ul>
 								</div>
 							</div>
@@ -83,20 +83,33 @@
 										usando tecnologías como HTML, CSS, JavaScript y Webpack
 									</p>
 									<ul class="actions">
-										<li><a href="https://jsrickandmortykevin.netlify.app/" class="button">Ve al proyecto</a></li>
+										<li><a href="https://jsrickandmortykevin.netlify.app/" class="button" target="_blank" rel="noopener noreferrer" >Ve al proyecto</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic04.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/pic04.jpg" alt="" data-position="top center"/></a>
 							<div class="content">
 								<div class="inner">
 									<h2>App del Clima</h2>
 									<p>Aplicacion que consulta el clima de cada Ciudad en Ingles, Creada con HTML, CSS y VanillaJS usando webpack con deploy en netlify
 									</p>
 									<ul class="actions">
-										<li><a href="https://elclimakevin.netlify.app/" class="button">Ve al proyecto</a></li>
+										<li><a href="https://elclimakevin.netlify.app/" class="button" target="_blank" rel="noopener noreferrer">Ve al proyecto</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/pic07.png" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>TODO's App</h2>
+									<p>Aplicacion para crear y guardar TODO's usando localstorage, creada con ReactJS, JavaScript y CSS con deploy en github pages
+									</p>
+									<ul class="actions">
+										<li><a href="https://kevjim.github.io/TODOs-app/" class="button"  target="_blank" rel="noopener noreferrer" >Ve al proyecto</a></li>
 									</ul>
 								</div>
 							</div>
@@ -137,8 +150,28 @@
 								<section>
 									<span><img src="./images/icon-square-big.png" alt="Logo_Webpack" style="width: 40px; margin-bottom: 10px;"></span>
 									<h3>Webpack</h3>
-									<p>webpack es un paquete de módulos de JavaScript de código abierto. Está hecho principalmente para JavaScript, ​​​​​ pero puede transformar activos de front-end como HTML, CSS e imágenes.</p>
-								</section>					
+									<p>webpack es un paquete de módulos de JavaScript de código abierto. Está hecho principalmente para JavaScript, ​​​​pero puede transformar activos de front-end como HTML, CSS e imágenes.</p>
+								</section>		
+								<section>
+									<span><img src="./images/MongoDB_Logo.png" alt="Logo_MongoDB" style="width: 40px; margin-bottom: 10px;"></span>
+									<h3>Mongo DB</h3>
+									<p>MongoDB es un sistema de base de datos NoSQL, orientado a documentos y de código abierto.</p>
+								</section>
+								<section>
+									<span><img src="./images/React_logo.png" alt="Logo_ReactJS" style="width: 40px; margin-bottom: 10px;"></span>
+									<h3>React</h3>
+									<p>React es una biblioteca Javascript de código abierto diseñada para crear interfaces de usuario con el objetivo de facilitar el desarrollo de aplicaciones en una sola página.</p>
+								</section>
+								<section>
+									<span><img src="./images/node-js.png" alt="Logo_NodeJS" style="width: 40px; margin-bottom: 10px;"></span>
+									<h3>Node Js</h3>
+									<p>Node.js es un entorno en tiempo de ejecución multiplataforma, de código abierto, para la capa del servidor basado en el lenguaje de programación JavaScript, asíncrono, con E/S de datos en una arquitectura orientada a eventos y basado en el motor V8 de Google.</p>
+								</section>
+								<section>
+									<span><img src="./images/logo-firebase.png" alt="Logo_Firebase" style="width: 40px; margin-bottom: 10px;"></span>
+									<h3>Firebase</h3>
+									<p>Firebase es una plataforma para el desarrollo de aplicaciones web y aplicaciones móviles lanzada en 2011 y adquirida por Google en 2014.</p>
+								</section>				
 							</div>
 						</div>
 					</section>
